<resources>
    <string name="app_name">DAS_Entrega1</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login">Login</string>
    <string name="usuario">Usuario</string>
    <string name="password">Password</string>
    <string name="registro">Registro</string>
    <string name="nombre_de_usuario">Nombre de Usuario</string>
    <string name="repite_la_contrase_a">Repite la contraseña</string>
    <string name="nombre">Nombre</string>
    <string name="apellidos">Apellidos</string>
    <string name="cumplea_os">Cumpleaños</string>
    <string name="contrase_a">Contraseña</string>
    <string name="canciones">Canciones</string>
    <string name="aqu_aparecer_n_las_canciones_de_cada_disco">Aquí aparecerán las canciones de cada disco.</string>
</resources>